# crypto_nav_manager

./: .gitignore  Cargo.toml  README.md
config/: iceoryx2.toml
deploy/: crypto-nav-manager.service
docs/: api-coverage.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
migrations/: 0001_strategy_envs.sql  0002_binance_fr_arb04_liang_trades.sql  0003_trading_fee_rates.sql  0004_strategy_st_ms.sql  0005_binance_fr_liang_trades.sql  0006_funding_csv_output.sql  0007_remove_funding_csv_output.sql  0008_binance_funding_fields.sql  0009_bybit_funding_fields.sql  0010_rest_egress_ip_usage.sql  0011_bybit_liang_trades.sql  0012_bybit_interest_fields.sql  0013_binance_intra_trades.sql  0014_binance_intra_funding.sql  0015_binance_intra_interest.sql  0016_market_making_table_names.sql  0017_market_making_tables_only.sql  0018_contract_multipliers.sql  0019_gate_fr_history_tables.sql  0020_history_sync_watermarks.sql  0021_normalize_history_storage.sql  0022_trading_fee_rates_for_all_strategies.sql  0023_binance_intra_rebates.sql  0024_strategy_snapshots.sql
scripts/: estimate_binance_intra_rebate_rate.py  import_binance_intra_history.py  import_bybit_funding_history.py  import_bybit_interest_history.py  import_bybit_trade_history.py
src/: contract_multipliers.rs  fee_rate_store.rs  fifo_pnl.rs  lib.rs  main.rs  mark_prices.rs  models.rs  pnl.rs  rest_dispatcher.rs  rest_ip_pool.rs  server.rs  strategy_env.rs
src/exchange/: binance.rs  bitget.rs  bybit.rs  common.rs  gate.rs  (+4 more)
(+7 files in other folders)
