[package]
name = "crypto_nav_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1"
hmac = "0.12"
hex = "0.4"
iceoryx2 = "0.8.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "signal"] }
url = "2.5"
anyhow = "1.0.104"
axum = "0.8.9"
tracing = "0.1.44"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.7.0", features = ["trace"] }
